--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.1",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.3"
   },
   "main": "index.js",
   "author": "'khalek-repliq' <'abdul.khalek@repliq.dev'>",
